--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     tools:context=".NewProjectActivity">
 
     <ImageView
@@ -18,71 +19,73 @@
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <com.google.android.material.tabs.TabLayout
-        app:tabTextAppearance="@style/TabText"
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:tabMode="scrollable">
+        app:layout_constraintStart_toStartOf="parent"
+        app:tabMode="scrollable"
+        app:tabTextAppearance="@style/TabText">
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_scaling_24dp"
-            android:text="Scale"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content" />
+            android:text="Scale" />
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_rotate_24dp"
-            android:text="Rotate"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content" />
+            android:text="Rotate" />
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_crop_24dp"
-            android:text="Crop"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:text="Crop" />
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_filters_24dp"
-            android:text="Filter"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:text="Filter" />
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_retouch_24dp"
-            android:text="Retouch"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:text="Retouch" />
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_face_recognition_24dp"
-            android:text="Face recognition"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:text="Face recognition" />
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_splines_24dp"
-            android:text="Splines"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:text="Splines" />
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_affine_transformation_24dp"
-            android:text="Affine transformation"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:text="Affine transformation" />
 
         <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:icon="@drawable/ic_unsharp_masking_24dp"
-            android:text="Unsharp masking"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:text="Unsharp masking" />
 
         <com.google.android.material.tabs.TabItem
-            android:icon="@drawable/ic_cube_24dp"
-            android:text="Cube"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:icon="@drawable/ic_cube_24dp"
+            android:text="Cube" />
 
     </com.google.android.material.tabs.TabLayout>
 
