--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,20 @@
     android:orientation="vertical">
 
     <ImageView
+        android:src="@drawable/texture"
         android:id="@+id/image1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/demo5"
-        />
+        android:layout_width="350dp"
+        android:layout_height="200dp"/>
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="convert"/>
+        android:text="Button" />
 
     <ImageView
-        android:id="@+id/image2"
-        android:layout_width="200dp"
-        android:layout_height="200dp"/>
+        android:id="@+id/image"
+        android:layout_width="350dp"
+        android:layout_height="400dp"/>
+
 </LinearLayout>
