fixes; started scaling menu

--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -22,12 +22,6 @@
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@drawable/ic_crop_24dp"
-        android:text="Crop" />
-
-    <com.google.android.material.tabs.TabItem
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:icon="@drawable/ic_filters_24dp"
         android:text="Filter" />
 
@@ -41,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_face_recognition_24dp"
-        android:text="FR" />
+        android:text="FD" />
 
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
