bonus2 face detection; I can't understand what's wrong with addView

--- a/app/src/main/res/layout/face_detection_bottom_menu.xml
+++ b/app/src/main/res/layout/face_detection_bottom_menu.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/faceDetectionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Detect"
+    <com.google.android.material.chip.Chip
+        android:id="@+id/face_detection_chip"
+        style="@style/Widget.MaterialComponents.Chip.Choice"
+        android:layout_width="118dp"
+        android:layout_height="61dp"
+        android:text="apply"
+        android:textAlignment="center"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
