--- a/app/src/main/res/layout/contrast_slider.xml
+++ b/app/src/main/res/layout/contrast_slider.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.google.android.material.slider.Slider
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/contrast_slider"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -10,4 +12,16 @@
         android:valueFrom="-200.0"
         android:valueTo="200.0"
         android:stepSize="1.0"
-        app:tickVisible="false" />
+        app:tickVisible="false"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="100dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
