--- a/app/src/main/res/layout/activity_cube.xml
+++ b/app/src/main/res/layout/activity_cube.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CubeActivity">
+    tools:context=".cube_3d.CubeActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
