--- a/app/src/main/res/layout/scaling_bottom_menu.xml
+++ b/app/src/main/res/layout/scaling_bottom_menu.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="84dp"
+        android:password="false"
         android:text="Scale"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
