--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         app:tint="@color/grey" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/FOV"
         style="@style/GreyTempTextColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
