--- a/app/src/main/res/layout/scaling_bottom_menu.xml
+++ b/app/src/main/res/layout/scaling_bottom_menu.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="16dp"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toStartOf="@+id/scalingButton"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.313"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="84dp"
+        android:layout_marginEnd="80dp"
         android:password="false"
         android:text="Scale"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,11 +31,11 @@
         android:id="@+id/antialiasing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
         android:text="Antialiasing"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.388"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scalingButton" />
+        tools:layout_editor_absoluteY="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
