--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -13,6 +13,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_margin="5dp"
+        android:paddingTop="55dp"
+        android:paddingBottom="60dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
