--- a/app/src/main/res/layout/rotation_bottom_menu.xml
+++ b/app/src/main/res/layout/rotation_bottom_menu.xml
@@ -1,19 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <com.google.android.material.slider.Slider
+        android:id="@+id/aspectRatioSlider"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:stepSize="0.000000001"
+        android:value="1.0"
+        android:valueFrom="0.2"
+        android:valueTo="10.0"
+        app:layout_constraintBottom_toTopOf="@+id/rotationSlider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:tickVisible="false" />
+
     <Button
-        android:id="@+id/rotateButton"
+        android:id="@+id/rotate90Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rotate"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:onClick="onRotateButtonClick" />
+        android:onClick="onRotate90ButtonClick"
+        android:text="90"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <com.google.android.material.slider.Slider
+        android:id="@+id/rotationSlider"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:stepSize="1"
+        android:value="0"
+        android:valueFrom="-180"
+        android:valueTo="180"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:tickVisible="false" />
+
+    <Switch
+        android:id="@+id/cropSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Crop"
+        app:layout_constraintBottom_toTopOf="@+id/rotate90Button"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
