--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -3,5 +3,7 @@
     android:shape="rectangle">
     <solid android:color="#C7DEE8"/>
     <corners android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
+        android:topRightRadius="20dp"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"/>
 </shape>
