--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -4,6 +4,7 @@
     android:id="@+id/bottom_menu"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:tabIndicatorHeight="0dp"
     app:tabMode="scrollable"
     app:tabTextAppearance="@style/TabText">
 
@@ -11,48 +12,48 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_scaling_24dp"
-        android:text="Scale" />
+        android:text="@string/scale" />
 
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_rotate_24dp"
-        android:text="Rotate" />
+        android:text="@string/rotate" />
 
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_filters_24dp"
-        android:text="Filter" />
+        android:text="@string/filter" />
 
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_retouch_24dp"
-        android:text="Retouch" />
+        android:text="@string/retouch" />
 
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_splines_24dp"
-        android:text="Spline" />
+        android:text="@string/spline" />
 
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_affine_transformation_24dp"
-        android:text="AT" />
+        android:text="@string/at" />
 
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_unsharp_masking_24dp"
-        android:text="UM" />
+        android:text="@string/um" />
 
     <com.google.android.material.tabs.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_cube_24dp"
-        android:text="Cube" />
+        android:text="@string/cube" />
 
 </com.google.android.material.tabs.TabLayout>
