--- a/app/src/main/res/layout/spline_menu_button.xml
+++ b/app/src/main/res/layout/spline_menu_button.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.chip.Chip
-        android:id="@+id/polygonChip"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
-        android:layout_width="118dp"
-        android:layout_height="61dp"
-        android:text="apply"
-        android:textAlignment="center"
-        android:textSize="30sp"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="90dp"
+        android:layout_height="39dp"
+        android:background="@drawable/round_button"
+        android:text="@string/menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
