--- a/app/src/main/res/layout/retouch_bottom_menu.xml
+++ b/app/src/main/res/layout/retouch_bottom_menu.xml
@@ -40,7 +40,7 @@
         android:id="@+id/brushSizeExplanation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Размер кисти: 10"
+        android:text="@string/__10"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@id/brushSize"
         app:layout_constraintStart_toStartOf="@id/brushSize"
@@ -50,7 +50,7 @@
         android:id="@+id/retouchCoefExplanation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Коэффициент ретуширования: 0.5"
+        android:text="@string/_0_5"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@id/retouchCoef"
         app:layout_constraintStart_toStartOf="@id/retouchCoef"
