--- a/app/src/main/res/layout/unsharpmask_bottom_menu.xml
+++ b/app/src/main/res/layout/unsharpmask_bottom_menu.xml
@@ -24,7 +24,7 @@
         android:id="@+id/radiusValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Радиус размытия: 10"
+        android:text="@string/_10"
         android:textColor="@android:color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/radiusSeekBar"
@@ -50,7 +50,7 @@
         android:id="@+id/amountValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Коэффициент усиления: 1.0"
+        android:text="@string/_1_0"
         android:textColor="@android:color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/amountSeekBar"
@@ -76,7 +76,7 @@
         android:id="@+id/thresholdValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Порог: 0"
+        android:text="@string/_0"
         android:textColor="@android:color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/thresholdSeekBar"
@@ -120,10 +120,11 @@
 
     <Button
         android:id="@+id/applyButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="92dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="24dp"
-        android:text="Apply"
+        android:background="@drawable/round_button"
+        android:text="@string/apply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
