--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="purple_500">#C282FA</color>
     <color name="purple_700">#92D5FF</color>
     <color name="teal_200">#FBB466</color>
+    <color name="orange">#CA6A01</color>
     <color name="teal_700">#FEC544</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
