--- a/app/src/main/res/layout/retouch_bottom_menu.xml
+++ b/app/src/main/res/layout/retouch_bottom_menu.xml
@@ -13,8 +13,6 @@
         android:layout_marginBottom="40dp"
         android:max="20"
         android:progress="10"
-        android:progressTint="#9C27B0"
-        android:thumbTint="#7B1FA2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,8 +27,6 @@
         android:layout_marginBottom="80dp"
         android:max="20"
         android:progress="5"
-        android:progressTint="#9C27B0"
-        android:thumbTint="#7B1FA2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -41,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/__10"
-        android:textColor="@android:color/white"
+        android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@id/brushSize"
         app:layout_constraintStart_toStartOf="@id/brushSize"
         app:layout_constraintEnd_toEndOf="@id/brushSize" />
@@ -51,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_0_5"
-        android:textColor="@android:color/white"
+        android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@id/retouchCoef"
         app:layout_constraintStart_toStartOf="@id/retouchCoef"
         app:layout_constraintEnd_toEndOf="@id/retouchCoef" />
