--- a/app/src/main/res/layout/unsharpmask_bottom_menu.xml
+++ b/app/src/main/res/layout/unsharpmask_bottom_menu.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="20dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <SeekBar
         android:id="@+id/radiusSeekBar"
@@ -13,8 +19,6 @@
         android:layout_marginEnd="16dp"
         android:max="20"
         android:progress="10"
-        android:progressTint="#9C27B0"
-        android:thumbTint="#7B1FA2"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/iconLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_10"
-        android:textColor="@android:color/white"
+        android:textColor="@color/dark_grey"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/radiusSeekBar"
         app:layout_constraintStart_toStartOf="@id/radiusSeekBar"
@@ -39,8 +43,6 @@
         android:layout_marginEnd="16dp"
         android:max="200"
         android:progress="100"
-        android:progressTint="#9C27B0"
-        android:thumbTint="#7B1FA2"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/iconLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_1_0"
-        android:textColor="@android:color/white"
+        android:textColor="@color/dark_grey"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/amountSeekBar"
         app:layout_constraintStart_toStartOf="@id/amountSeekBar"
@@ -65,8 +67,6 @@
         android:layout_marginEnd="16dp"
         android:max="255"
         android:progress="0"
-        android:progressTint="#9C27B0"
-        android:thumbTint="#7B1FA2"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/iconLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_0"
-        android:textColor="@android:color/white"
+        android:textColor="@color/dark_grey"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/thresholdSeekBar"
         app:layout_constraintStart_toStartOf="@id/thresholdSeekBar"
@@ -120,13 +120,16 @@
 
     <Button
         android:id="@+id/applyButton"
-        android:layout_width="92dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="93dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/round_button"
         android:text="@string/apply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+
