--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FBB466</color>
-    <color name="purple_500">#C282FA</color>
-    <color name="purple_700">#92D5FF</color>
-    <color name="teal_200">#FBB466</color>
-    <color name="orange">#CA6A01</color>
-    <color name="teal_700">#FEC544</color>
+    <color name="light_orange">#FBB466</color>
+    <color name="purple">#C282FA</color>
+    <color name="light_blue">#92D5FF</color>
+    <color name="orange1">#FBB466</color>
+    <color name="orange2">#FEC544</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#989B9E</color>
